--- a/index.html
+++ b/index.html
@@ -5,9 +5,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Projeto RS</title>
     <link rel="shortcut icon" href="imagens/favicon.ico" type="image/x-icon">
-    
+    <link rel="stylesheet" href="styles/style.css">
+
 </head>
 <body>
-    <h1>OK?</h1>
+    <main>
+        <head>
+            <section id="cel">
+                <iframe src="home.html" frameborder="0" name="tela" id="tela"></iframe>
+            </section>
+        
+            <section id="redes">
+            </section>
+        </head>
+    </main>
 </body>
 </html>
