--- a/index.html
+++ b/index.html
@@ -10,14 +10,20 @@
 </head>
 <body>
     <main>
-        <head>
-            <section id="cel">
-                <iframe src="home.html" frameborder="0" name="tela" id="tela"></iframe>
-            </section>
+
+        <section id="cel">
+            <iframe src="home.html" frameborder="0" name="tela" id="tela">Não é compatível</iframe>
+        </section>
+    
+        <section id="redes">
+            <a href="#" target="tela"><img src="imagens/logo-home.jpg" alt=""></a>
+            <a href="#" target="tela"><img src="imagens/logo-youtube.jpg" alt=""></a>
+            <a href="#" target="tela"><img src="imagens/logo-facebook.jpg" alt=""></a>
+            <a href="#" target="tela"><img src="imagens/logo-instagram.jpg" alt=""></a>
+            <a href="#" target="tela"><img src="imagens/logo-twitter.jpg" alt=""></a>
+            <a href="#" target="tela"><img src="imagens/logo-github.jpg" alt=""></a>
+        </section>
         
-            <section id="redes">
-            </section>
-        </head>
     </main>
 </body>
 </html>
