--- a/index.html
+++ b/index.html
@@ -16,12 +16,12 @@
         </section>
     
         <section id="redes">
-            <a href="#" target="tela"><img src="imagens/logo-home.jpg" alt=""></a>
+            <a href="home.html" target="tela"><img src="imagens/logo-home.jpg" alt=""></a>
             <a href="#" target="tela"><img src="imagens/logo-youtube.jpg" alt=""></a>
             <a href="#" target="tela"><img src="imagens/logo-facebook.jpg" alt=""></a>
             <a href="#" target="tela"><img src="imagens/logo-instagram.jpg" alt=""></a>
             <a href="#" target="tela"><img src="imagens/logo-twitter.jpg" alt=""></a>
-            <a href="#" target="tela"><img src="imagens/logo-github.jpg" alt=""></a>
+            <a href="youtube.html" target="tela"><img src="imagens/logo-github.jpg" alt=""></a>
         </section>
         
     </main>
